--- a/configure.ac
+++ b/configure.ac
@@ -501,6 +501,7 @@ AS_MEX_PLUGIN(telepathy,
                farsight2-0.10])
 AS_MEX_PLUGIN(debug-buddy)
 AS_MEX_PLUGIN(gnome-dvb)
+AS_MEX_PLUGIN(dvb)
 AS_MEX_PLUGIN(opticaldisc)
 AS_MEX_PLUGIN(twitter-send, [libsocialweb-client])
 
