--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,7 +3,8 @@ include $(top_srcdir)/build/Makefile.am.gtester
 NULL =
 EXTRA_DIST =
 
-noinst_PROGRAMS = $(TEST_PROGS) test-config test-keys test-dvb-scanner
+noinst_PROGRAMS = $(TEST_PROGS) test-config test-keys test-dvb-scanner \
+		  test-view
 
 progs_ldadd =						\
 	$(top_builddir)/mex/libmex-@MEX_API_VERSION@.la	\
@@ -46,6 +47,5 @@ test_keys_LDADD    = $(progs_ldadd)
 test_dvb_scanner_SOURCES  = test-dvb-scanner.c
 test_dvb_scanner_LDADD    = $(progs_ldadd)
 
-TEST_PROGS        += test-view
 test_view_SOURCES  = test-view.c
 test_view_LDADD    = $(progs_ldadd)
